integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_and_update_metadata_v2__mint.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 1160
expression: asset
---
{
  "interface": "V1_NFT",
  "id": "4TBxZUkV9eDjFoi4HeJX924fkExCFXLSTKkdoNy7iiT8",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "FBeDz4ZzMcPawJUdXTKJhQszMsQVnzsg2V86GbGhDufB",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EHnEc36MD4gW2VvnJZ8LCDovJFRamyWSgfAh9EckHSdP",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "6Rhv96hQ6oTV7rw11P1Yh2ZhQ1FtM5z4HPi6siCsviGz",
    "tree": "FBjWzYcRkjxQhoiHqDB1ivk5QmmYCPZwxc7s5rCbq3mZ",
    "seq": 1,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "3Re9T27Z3cZU341e7Ag7xUusjTuNvKNZAeE31BwZerdL"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
